--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
   <head>
     <title>Наша многопользовательская игра</title>
     <style>
-      canvas {
-        width: 800px;
-        height: 600px;
-        border: 5px solid black;
+      div{
+        background: red;
+        position: absolute;
+        width: 50px;
+        height: 50px;
       }
     </style>
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    
   </body>
   <script src="/static/game.js"></script>
 </html>
